--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "landing-evento",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html src/styles/styles.scss src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
